# DoglinkOS-2nd

./: .gitignore  Cargo.toml  GNUmakefile  README.md  limine.conf
.cargo/: config.toml
.github/workflows/: rust.yml
app-rt/: Cargo.toml
app-rt/src/: lib.rs
apps/hello_std/src/: main.rs
apps/image-test/: Cargo.toml
apps/image-test/src/: main.rs
apps/imgview/: Cargo.toml
apps/imgview/src/: main.rs
apps/infinite-loop/: Cargo.toml
apps/infinite-loop/src/: main.rs
apps/init/: Cargo.toml
apps/init/src/: main.rs
builder/: Cargo.toml
builder/assets/: BOOTX64.EFI  README  empty.elf  hello.elf  hello_std.elf  huge_alloc.elf  limine.conf  lua.elf  mlibc-test.elf  pl_editor.elf  test2.ppm  test2.qoi
builder/src/: lib.rs  main.rs
kernel/: Cargo.toml  GNUmakefile  build.rs
kernel/src/: acpi.rs  apic.rs  ata.rs  console.rs  cpu.rs  inputdev.rs  int.rs  lib.rs  main.rs  mm.rs  mouse.rs  power.rs  rtc.rs
kernel/src/apic/: io.rs  local.rs  mod.rs
kernel/src/blockdev/: ahci.rs  mod.rs  nvme.rs  partition.rs  ramdisk.rs
kernel/src/blockdev/ahci/: driver.rs  hba.rs  identify.rs  mod.rs
kernel/src/blockdev/partition/: ahci.rs  mod.rs  nvme.rs
kernel/src/console/: framebuffer.rs  mod.rs  serial.rs
kernel/src/mm/: bitmap.rs  mod.rs  page_alloc.rs
kernel/src/pcie/: enumrate.rs  mod.rs
kernel/src/sound/: mod.rs  pcspk.rs
kernel/src/task/: mod.rs  process.rs  sched.rs  syscall.rs
kernel/src/vfs/: devfs.rs  fat.rs  mod.rs
