[package]
name = "builder"
edition = "2024"
version = "0.1.0"

[dependencies]
argh = "0.1.12"
anyhow = "1.0.94"
tempfile = "3.14.0"
gpt = "4.0.0"
ovmf-prebuilt = "0.2.1"

[dependencies.fatfs]
version = "0.3.6"
default-features = false
features = ["std", "alloc"]

[dependencies.DoglinkOS-2nd]
path = "../kernel"
artifact = "bin"
target = "x86_64-unknown-none"

[dependencies.doglinked]
path = "../apps/init"
artifact = "bin"
target = "x86_64-unknown-none"

[dependencies.infinite-loop]
path = "../apps/infinite-loop"
artifact = "bin"
target = "x86_64-unknown-none"

[dependencies.hello_std]
optional = true
path = "../apps/hello_std"
artifact = "bin"
target = "x86_64-unknown-dlos"

[features]
dlos_std = ["dep:hello_std"]
