[package]
name = "DoglinkOS-2nd"
version = "0.0.2-20250105"
edition = "2021"

[dependencies]
good_memory_allocator = "0.1.7"
limine = "0.3.1"
noto-sans-mono-bitmap = "0.3.1"
raw-cpuid = "11.3.0"
spin = "0.9.8"
x2apic = "0.4.3"
x86_64 = "0.15.2"
os-terminal = "0.5.8"
fatfs = { git = "https://github.com/rafalh/rust-fatfs", rev = "c4bb76929eb115f228720631b4110f827b998653", default-features = false, features = ["alloc", "lfn"] }
bit_field = "0.10.2"
acpi = "5.1.0"
goblin = { version = "0.9.3", default-features = false, features = ["elf64","elf32","endian_fd"] }
